@@ -2,7 +2,8 @@
 ---
 - Include improvements to integer decoder from SVN trunk.
   They have been accidentally promised on 1.8.0 release announcements, though they were not there. Here it is: ISO compliant fixed point decoding (speed optimizations are still reserved for next release).
-- fixed build with ./configure --enable-modules (bug in configure script)
+- Fixed build with ./configure --enable-modules (bug in configure script).
+- Fix name of binary in help screen when called with path.
 
 1.8.0 (The Taihei Monmament)
 ---
